organizando arquivos em pastas

--- a/test.html
+++ b/test.html
@@ -4,9 +4,9 @@
 	 	<meta http-equiv="Content-Type" content="text/html; charset=UTF-8"/>
 		<title>QUnit Test Suite</title>
 		<link rel="stylesheet" type="text/css" href="qunit.css" media="screen">
-		<script type="text/javascript" src="jquery-1.6.2.min.js"></script>
-		<script type="text/javascript" src="qunit.js"></script>
-		<script type="text/javascript" src="module_a_test.js"></script>
+		<script type="text/javascript" src="js/jquery-1.6.2.min.js"></script>
+		<script type="text/javascript" src="js/qunit.js"></script>
+		<script type="text/javascript" src="js/module_a_test.js"></script>
 	</head>
 	<body>	    
 	    <h1 id="qunit-header">QUnit Test Suite</h1>  
